--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extern/Pomme"]
 	path = extern/Pomme
-	url = https://github.com/jorio/Pomme
+	url = https://github.com/fordcars/Pomme
+[submodule "extern/picaGL"]
+	path = extern/picaGL
+	url = https://github.com/masterfeizz/picaGL
