--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "extern/Pomme"]
 	path = extern/Pomme
-	url = https://github.com/jorio/Pomme
+	url = https://github.com/fordcars/Pomme.git
+	branch = 3ds-support
